syntax = "proto2";
import "dccl/option_extensions.proto";
import "goby/middleware/protobuf/app_config.proto";
import "goby/zeromq/protobuf/interprocess_config.proto";

package goby.test.zeromq.protobuf;

message TestConfig
{
    optional goby.middleware.protobuf.AppConfig app = 1;
    optional goby.zeromq.protobuf.InterProcessPortalConfig interprocess = 2;

    optional int32 num_messages = 3 [default = 10000];
    optional int32 num_rx_threads = 4 [default = 10];
    optional int32 num_tx_threads = 5 [default = 2];
}

message Widget
{
    optional int32 b = 1;
}
